--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Aclonica&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre:400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,500,700,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
